Fix jumping sidebar width
Now it jumps less.

--- a/static/styles.css
+++ b/static/styles.css
@@ -299,7 +299,7 @@ img {
 	header {
 		box-sizing: border-box;
 		display: block;
-		flex: 2 1 auto;
+		flex: 1 1 auto;
 		min-height: 100vh;
 	}
 
